Rearranging biochimical reactions

--- a/application.macosx/MainMatrix.app/Contents/Info.plist
+++ b/application.macosx/MainMatrix.app/Contents/Info.plist
@@ -28,7 +28,7 @@
 	<key>Java</key>
 	<dict>
 		<key>VMOptions</key>
-		<string> -Xms64m -Xmx384m</string>
+		<string>-Xmx10g</string>
 		<key>MainClass</key>
 		<string>main.MainMatrix</string>
 		<key>JVMVersion</key>
