--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Feb 02 18:10:47 CST 2015
+#Tue Feb 10 19:07:46 GMT+07:00 2015
 eclipse.preferences.version=1
-encoding//src/main/PathwayViewer_2_9.java=UTF-8
+encoding//src/main/PathwayMatrix_1_1.java=UTF-8
